fix vertical alignment of label icons

--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@ nav li {
 
 .icon-sec {
     font-variation-settings: "FILL" 0, "wght" 350, "GRAD" 0, "opsz" 48;
-    vertical-align: middle;
+    vertical-align: sub;
     margin-right: 3px;
 }
 
@@ -960,7 +960,7 @@ section contact
 
 .icon-contact {
     font-variation-settings: "FILL" 0, "wght" 450, "GRAD" 0, "opsz" 48;
-    vertical-align: middle;
+    vertical-align: text-bottom;
     color: var(--darkgray);
 }
 
